# gillian-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Notes.md  README.md  TODO.md  build_all_docker.sh  compile_all.sh  dll_seg_l_to_r_proof.gil  expand.sh  gr.sh  run.sh  rust-toolchain  rust-toolchain.toml  scratch.rs  slice_split_at.gil  test_all.sh  test_ci_gil.sh  test_docker_gil.sh  why3find.json
.github/workflows/: ci.yml
Gillian-Rust/: .gitignore  .ocamlformat  Makefile  dune-project  esy.json  gillian-rust.opam  gillian-rust.opam.locked  gillian-rust.opam.template  list_std_mono.gil  list_std_poly.gil  reinstall.sh  test.smt2  test_eval.sh  wp.gil  wp_proph.gil
Gillian-Rust/esy.lock/: index.json
Gillian-Rust/gillian_rust/lib/: actions.ml  array_utils.ml  c_global_env.ml  c_global_env.mli  c_heap.ml  c_memory.ml  c_runner.ml  dune  gillian_rust.ml  matthew.ml  matthew.ml_  parser_and_compiler.ml  parser_and_compiler.mli  partial_layout.ml  projections.ml  r_config.ml  result.ml  rust_types.ml  s_heap.ml  s_heap.ml_  s_memory.ml  s_memory.mli  ty.ml  tyenv.ml  tyenv.mli  vec.ml  vec.mli
Gillian-Rust/gillian_rust/lib/common/: actions.ml  dune  parser_and_compiler.ml  r_config.ml  ty.ml  tyenv.ml  tyenv.mli
Gillian-Rust/gillian_rust/lib/concrete/: array_utils.ml  c_heap.ml  c_memory.ml  c_runner.ml  dune  heap.ml  memory.ml  partial_layout.ml  projections.ml  runner.ml  runner.mli
Gillian-Rust/gillian_rust/lib/symbolic/: aloc_utils.ml  delayed_utils.ml  dune  err.ml  heap.ml  layout_knowledge.ml  lft.ml  lft.mli  lft_ctx.ml  list_utils.ml  memory.ml  memory.mli  obs_ctx.ml  partial_layout.ml  partial_layout.ml_  projections.ml  prophecies.ml  qty.ml  s_err.ml  s_heap.ml  s_memory.ml  s_memory.mli  sty.ml  ty.ml
Gillian-Rust/gillian_rust/lib/utils/: dune  option.ml  result.ml
Gillian-Rust/runtime/: dune  i__binop.gil  i__lang.gil  i__lang_no_pcy.gil  i__lang_pcy.gil  i__ownable.gil  i__ownable.gil.incomplete  i__ownable.ml  i__ownable2.gil  i__ownable_pcy.gil  i__ownable_pcy.gil.incomplete  i__ownable_pcy.ml  i__prophecies.gil  i__repr.gil.incomplete  i__repr.ml  i__slice_shims.gil  i__std_shims.gil  i__std_shims_no_pcy.gil  i__std_shims_pcy.gil
Gillian-Rust/test/: dune  run_tests.ml
cargo-gillian/: Cargo.toml
cargo-gillian/src/: main.rs
creusillian/: Cargo.toml
creusillian/src/: anf.rs  lib.rs
creusillian_proc/: Cargo.toml
creusillian_proc/src/: lib.rs
examples/: a.rs  array_sum.rs  enum_fields.rs  enum_mut.rs  fcallmovearg.rs  readaftermove.rs  repr_c_no_simple.rs_  simpleborrow.rs  simplefcall.rs  simplemutborrow.rs  slice_split_at.rs_  smallest.rs  store_enum.rs  store_struct.rs  store_tuples.rs  struct_mut.rs  tuples_mut.rs  zst.rs
examples/lang/: array_sum.rs  simpleborrow.rs  store_struct.rs  struct_mut.rs
examples/pointers/: structs.rs_
examples/verification/: creusot_list.rs  dummy.rs  list_std.rs  list_std_mono.gil  list_std_mono.rs  list_std_mono_repr.rs  list_std_poly.rs  list_std_proph.rs  list_std_shallow_repr.rs  my_box.rs  std_option.rs  tiny_int.rs  vec_std_proph.rs  wp.rs  wp_proph.rs  wp_repr_c.rs
gillian/: Cargo.toml
gillian/src/: lib.rs
gilogic/: Cargo.toml  build.rs
gilogic/rust-std-files/: linked_list.rs  raw_vec.rs
gilogic/src/: alloc.rs  iterated.rs  iterated_no_pcy.rs  iterated_pcy.rs  lemma.rs  lib.rs  ownable.rs  prophecies.rs  repr.rs  seq.rs  stubs.rs  tys.rs
gilogic_internal/: Cargo.toml
gilogic_proc/: Cargo.toml
gilogic_proc/src/: assert_bind.rs  borrows.rs  extract_lemmas.rs  folding.rs  lib.rs  lifetime_hack.rs  quote.rs  spec.rs  utils.rs  visitors.rs
gilogic_proc/src/gillian_quote/: assertion.rs  formula.rs  mod.rs  predicate.rs
gilogic_proc/src/gillian_syn/: assertion.rs  formula.rs  mod.rs  predicate.rs  spec.rs
gilogic_proc/src/gilogic_syn/: asrt.rs  frozen_borrow.rs  frozen_borrow_pcy.rs  lemma.rs  macros.rs  mod.rs  predicate.rs  print.rs  subst.rs  utils.rs  visitors.rs
gilogic_proc_dummy/: Cargo.toml
gilogic_proc_dummy/src/: lib.rs
lib_rust_to_gil/: Cargo.toml
lib_rust_to_gil/src/: ast_print.rs  backend.rs  block.rs  body_ctx.rs  callbacks.rs  compile.rs  config.rs  emit.rs  gil.rs  lib.rs  location_table.rs  metadata.rs  names.rs  place.rs  prog_context.rs  rvalue.rs  signature.rs  statement.rs  temp_gen.rs
lib_rust_to_gil/src/codegen/: block.rs  body.rs  body_ctx.rs  config.rs  context.rs  fun_shims.rs  function_call.rs  genv.rs  lft_ctx.rs  memory.rs  mod.rs  names.rs  place.rs  prophecies.rs  runtime.rs  rvalue.rs  statement.rs  store_encoding.rs  typ.rs  typ_encoding.rs
lib_rust_to_gil/src/global_env/: auto_items.rs  genv.rs  mod.rs
lib_rust_to_gil/src/logic/: builtins.rs  core_preds.rs  dummy_pre.rs  extract_lemma.rs  extract_lemma_utils.rs  gilsonite.rs  lemma.rs  mod.rs  param_collector.rs  predicate.rs  traits.rs  utils.rs
lib_rust_to_gil/src/utils/: attrs.rs  cgu_reuse.rs  cleanup_logic.rs  fatal.rs  log.rs  macros.rs  mod.rs  polymorphism.rs  tcx_utils.rs  ty.rs
misc/: rr_minivec.rs
misc/rust-std-files/: README.md  vec.rs
runtime/: i__lang.gil  i__slice_shims.gil
rust-std-files/: linked_list.rs
rust_to_gil/: Cargo.toml
rust_to_gil/src/: main.rs  utils.rs
rust_to_gil/tests/: ui.rs
scripts/: test.py
src/: main.rs
test_crates/proven/: .gitignore  Cargo.toml
test_crates/sort/: Cargo.toml  why3find.json
test_crates/sort/src/: main.rs
test_crates/tutorial/: Cargo.toml
test_crates/tutorial/src/: lib.rs
test_crates/vec/: Cargo.toml  rust-toolchain.toml
test_crates/vec/src/: lib.rs
tests/: Cargo.toml  dummy.rs
tests/fail/: creusot_dummy.rs  creusot_list.rs  vec_std_proph.rs  wp_repr_c.rs
tests/multiple_lifetimes/: simple.rs  simple.stderr  simple.stdout
tests/noproph/: creusot_dummy.rs  lemma_tests.rs  lemma_tests.stderr  lemma_tests.stdout  list_std.rs  list_std.stderr  list_std.stdout  list_std_lemma.rs  list_std_lemma.stderr  list_std_lemma.stdout  lp.rs  lp.stderr  lp.stdout  my_box.rs  my_box.stderr  my_box.stdout  pattern.rs  pattern.stderr  pattern.stdout  poly.rs  poly.stderr  poly.stdout  size_test.rs  (+14 more)
(+93 files in other folders)
