(lang dune 2.9)

(using dune_site 0.1)

(name gillian-rust)

(authors "Sacha-Élie Ayoun" "Xavier Denis")

(maintainers "Sacha-Élie Ayoun" "Xavier Denis")

(generate_opam_files)

(license BSD-3-Clause)

(bug_reports https://github.com/GillianPlatform/rust-to-gil/issues)

(homepage https://github.com/GillianPlatform/rust-to-gil/)

(source
 (github GillianPlatform/rust-to-gil))

(package
 (name gillian-rust)
 (synopsis "Gillian instantiation for Rust")
 (depends gillian dune-sites)
 (sites
  (share runtime)))
