[package]
name = "creusillian"
version = "0.1.0"
edition = "2021"
authors = ["Sacha-Élie Ayoun <sachaayoun@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
syn = { version = "1.0.103", features = ["full", "visit", "visit-mut", "extra-traits"] }
pearlite-syn = { git = "https://github.com/xldenis/creusot", rev = "639bc912ddc793b9cd56255c47158533b3c33c56" }
quote = "1.0.21"
