[package]
name = "creusillian"
version = "0.1.0"
edition = "2021"
authors = [
  "Sacha-Élie Ayoun <sachaayoun@gmail.com>",
  "Xavier Denis <research@xav.io>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
syn = { version = "2", features = [
  "full",
  "visit",
  "visit-mut",
  "extra-traits",
  "parsing",
  "printing",
] }
pearlite-syn = { version = "0.1.1", features = ["full"] }
quote = "1.0.21"
itertools = "*"
