[package]
name = "gilogic_proc"
version = "0.1.0"
edition = "2021"
authors = ["Sacha-Élie Ayoun <sachaayoun@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
syn = { version = "1.0.103", features = ["full", "visit", "visit-mut"] }
quote = "1.0.21"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
