[package]
name = "lib_rtg"
version = "0.1.0"
authors = ["Sacha-Élie Ayoun <sachaayoun@gmail.com>"]
description = "Library of a compiler from Rust to GIL, for analysis with Gillian"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gillian = { path = "../gillian" }
log = "0.4"
env_logger = "0.9.0"
serde_json = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true