[package]
name = "lib_rtg"
version = "0.1.0"
authors = ["Sacha-Élie Ayoun <sachaayoun@gmail.com>"]
description = "Library of a compiler from Rust to GIL, for analysis with Gillian"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gillian = { path = "../gillian" }
log = "0.4"
env_logger = "0.9.0"
serde_json = "1.0"
num-bigint = "0.4"
indexmap = "2.2"
once_map = "0.4"
itertools = "0.12.1"
creusot-metadata = { git = "https://github.com/xldenis/creusot", rev = "9cee2464" }


[package.metadata.rust-analyzer]
rustc_private = true
