[package]
name = "rust_to_gil"
version = "0.1.0"
authors = ["Sacha-Élie Ayoun <sachaayoun@gmail.com>"]
description = "Library of a compiler from Rust to GIL, for analysis with Gillian"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_rtg = { path = "../lib_rust_to_gil" }
log = "0.4"
toml = "0.5.9"
serde_json = "1.0"

[dev-dependencies]
ui_test = { version = "0.26" }
[package.metadata.rust-analyzer]
rustc_private = true

[[test]]
test = false
name = "ui"
harness = false
