(executables
 (names i__ownable))

(rule
 (deps i__ownable.exe i__ownable.gil.incomplete)
 (target i__ownable.gil)
 (action
  (with-stdout-to
   %{target}
   (run ./i__ownable.exe))))

(install
 (section share)
 (files
  i__binop.gil
  i__lang.gil
  i__std_shims.gil
  i__ownable.gil
  i__prophecies.gil)
 (package gillian-rust))
