(executables
 (names i__ownable i__ownable_pcy))

(rule
 (deps i__ownable.exe i__ownable.gil.incomplete)
 (target i__ownable.gil)
 (action
  (with-stdout-to
   %{target}
   (run ./i__ownable.exe))))

(rule
 (deps i__ownable_pcy.exe i__ownable_pcy.gil.incomplete)
 (target i__ownable_pcy.gil)
 (action
  (with-stdout-to
   %{target}
   (run ./i__ownable_pcy.exe))))

(install
 (section share)
 (files
  i__binop.gil
  i__lang.gil
  i__std_shims.gil
  i__ownable.gil
  i__ownable_pcy.gil
  i__prophecies.gil
  i__std_shims_pcy.gil
  i__std_shims_no_pcy.gil)
 (package gillian-rust))
