[package]
name = "sort"
version = "0.1.0"
edition = "2021"

[dependencies]

proven = { version = "*", path = "../proven" }
creusillian = { version = "*", path = "../../creusillian" }
gilogic = { version = "*", path = "../../gilogic" }
creusot-contracts = { version = "0.4.0" }

[profile.creusot]
inherits = "dev"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(gillian)',
  'cfg(creusot)',
] }
