[package]
name = "vec"
version = "0.1.0"
edition = "2021"

[dependencies]

creusillian = { version = "*", path = "../../creusillian" }
gilogic = { version = "*", path = "../../gilogic" }
creusot-contracts = { version = "0.4.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gillian)', 'cfg(creusot)'] }